selfsigned/deployment/selfsigned-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selfsigned-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "self-signed-cluster-issuer"
spec:
  rules:
  - host: selfsigned.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: selfsigned-app
            port:
              number: 80
  tls:
  - hosts:
    - selfsigned.example.com
    secretName: selfsigned-app-cert
